fix: date selector on Safari
TH-1456.

Fix a bug that made the date selector in search page to spread all
screen on Iphone and in a large area on Safari desktop.

--- a/apps/events-helsinki/src/domain/search/eventSearch/advancedSearch/search.module.scss
+++ b/apps/events-helsinki/src/domain/search/eventSearch/advancedSearch/search.module.scss
@@ -97,7 +97,9 @@ $buttonWidth: 180px;
 
   .dateSelectorWrapper {
     & > div {
-      height: -webkit-fill-available; // Fill 2px of available space under dropdown
+      min-height: (
+        var(--spacing-3-xl)
+      ); // Fill 2px of available space under dropdown
     }
   }
 
